--- a/API_Endpoint/package.json
+++ b/API_Endpoint/package.json
@@ -20,6 +20,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.12.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.2"
   }
 }
