Modify the style guide rules to suite our PORT

--- a/API_Endpoint/.eslintrc
+++ b/API_Endpoint/.eslintrc
@@ -25,6 +25,7 @@
         "radix":"warn",
         "no-console":"warn",
         "padded-blocks":"off",
+        "prefer-template":"off",
         "no-unused-vars": [
             "error",
             {
