--- a/API_Endpoint/package.json
+++ b/API_Endpoint/package.json
@@ -13,10 +13,12 @@
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "chai": "^4.1.2",
-    "chai-http": "^4.0.0"
+    "chai-http": "^4.0.0",
+    "babel-register": "^6.26.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
